Changing some styles and adding the hangman game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous"
     />
-    <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/theme.css" />
     <title>Portfolio</title>
@@ -22,19 +21,9 @@
     <header>
       <div class="photo"></div>
       <div class="introduction">
-        <h1>
-          Hey there, I am Mohamed Ali,
-          <span
-            class="typer"
-            id="main"
-            data-words="Software Engineer.,Web developer."
-            data-delay="100"
-            data-deleteDelay="2000"
-          ></span>
-          <span class="cursor" data-owner="main"></span>
-        </h1>
+        <h1>Hey there, I am Mohamed Ali, Software Engineer</h1>
         <p>
-          I'm a Software Developer based in Sweden. I am passionate about taking
+          I'm a software engineer based in Sweden. I am passionate about taking
           part in and creating digital experiences that affect the lives of
           users. As a reliable and open person, I enjoy helping and working with
           others to create useful products. This is more than software
@@ -66,7 +55,7 @@
     </header>
 
     <main>
-      <h2 class="work-title">Work</h2>
+      <h2 class="work-title">Some projects</h2>
 
       <div class="projects">
         <div class="project">
@@ -80,7 +69,10 @@
                 class="button"
                 >Source Code</a
               >
-              <a href="projects/Colorz/" target="_blank" class="button"
+              <a
+                href="https://immoe.github.io/colorz"
+                target="_blank"
+                class="button"
                 >View Demo</a
               >
             </div>
@@ -97,7 +89,10 @@
                 class="button"
                 >Source Code</a
               >
-              <a href="projects/spotify/" target="_blank" class="button"
+              <a
+                href="https://immoe.github.io/spotify"
+                target="_blank"
+                class="button"
                 >View Demo</a
               >
             </div>
@@ -115,7 +110,7 @@
                 >Source Code</a
               >
               <a
-                href="projects/password_checker/"
+                href="https://immoe.github.io/password_checker"
                 target="_blank"
                 class="button"
                 >View Demo</a
@@ -134,7 +129,30 @@
                 class="button"
                 >Source Code</a
               >
-              <a href="projects/jordan/" target="_blank" class="button"
+              <a
+                href="https://immoe.github.io/jordan"
+                target="_blank"
+                class="button"
+                >View Demo</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="description">
+            <h3>Hangman</h3>
+            <p>A classic hangman game</p>
+            <div class="buttons">
+              <a
+                href="https://github.com/immoe/hangman"
+                target="_blank"
+                class="button"
+                >Source Code</a
+              >
+              <a
+                href="https://immoe.github.io/hangman"
+                target="_blank"
+                class="button"
                 >View Demo</a
               >
             </div>
