--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="web development, software development, software engineer, programmer, javascript, websites, technology"
+    />
+    <meta
+      name="description"
+      content="The official website for Mohamed Ali (ImMoe). Here you can explore all the projects created and social media links."
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -61,7 +69,10 @@
         <div class="project">
           <div class="description">
             <h3>Colorz</h3>
-            <p>A color game for learning RGB</p>
+            <p>
+              A color game for learning RGB colors written in HTML, CSS and
+              Javascript.
+            </p>
             <div class="buttons">
               <a
                 href="https://github.com/immoe/Colorz"
@@ -81,7 +92,7 @@
         <div class="project">
           <div class="description">
             <h3>Spotify</h3>
-            <p>A project similar to Spotify</p>
+            <p>A spotify music list created with HTML, CSS and Javascript.</p>
             <div class="buttons">
               <a
                 href="https://github.com/immoe/spotify"
@@ -101,7 +112,10 @@
         <div class="project">
           <div class="description">
             <h3>Password Checker</h3>
-            <p>How strong is your password?</p>
+            <p>
+              How secure is your password? Find out with this checker built with
+              Javascript regular expressions.
+            </p>
             <div class="buttons">
               <a
                 href="https://github.com/immoe/password_checker"
@@ -121,7 +135,10 @@
         <div class="project">
           <div class="description">
             <h3>Air Jordan</h3>
-            <p>Nike Jordan Theme</p>
+            <p>
+              A landing page for Nike Air Jordan using HTML, CSS and GSAP for
+              animations.
+            </p>
             <div class="buttons">
               <a
                 href="https://github.com/immoe/jordan"
@@ -141,7 +158,7 @@
         <div class="project">
           <div class="description">
             <h3>Hangman</h3>
-            <p>A classic hangman game</p>
+            <p>Guess the city of country. Built on Javascript.</p>
             <div class="buttons">
               <a
                 href="https://github.com/immoe/hangman"
@@ -153,6 +170,23 @@
                 href="https://immoe.github.io/hangman"
                 target="_blank"
                 class="button"
+                >View Demo</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="description">
+            <h3>Gawlecargo - Transport Services</h3>
+            <p>
+              Gawlecargo is a third party logistic service provider based in
+              Dubai. Built in Wordpress.
+            </p>
+            <div class="buttons">
+              <a href="https://gawlecargo.com" target="_blank" class="button"
+                >Source Code</a
+              >
+              <a href="https://gawlecargo.com" target="_blank" class="button"
                 >View Demo</a
               >
             </div>
